[tool.poetry]
name = "hexgen"
version = "0.2.7"
description = "generate world hex maps"
authors = ["Austin Philp <austinphilp@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.4.0"
numpy = "^1.24.2"
compact-json = "^1.5.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3"
flake8 = "^3"
jedi = "<0.18.0"  # https://github.com/ipython/ipython/issues/12740
pre-commit = "2.13.0"
isort = "^5"
black = "^20.8b1"
ipdb = "^0.13.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 130
exclude = '''
/(
    \.eggs
  | \.git
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 130
skip = ["scripts"]
known_first_party = ["tests"]
